2023-12-30  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/raylib_with_tileson.rb : Added

2023-12-17  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/shaders_basic_pbr.rb : Added

2023-12-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/fd84ab3cf735a643a074780ba73559d125e35aad ) and raygui ( https://github.com/raysan5/raygui/commit/2c8dc854d4e585761c2d4c77b4abbc46d298d5be )

2023-12-09  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/a9ba51aa72cfc9c75c2230726a49e1d9065b3c01 ) and raygui ( https://github.com/raysan5/raygui/commit/dc103715435a258c68b00a89ba48b95c146e5b87 )

2023-11-30  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/e7a486fa81adac1833253c849ca73c5b3f7ef361 )

2023-11-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Removed unnecessary dependency

2023-11-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/ae50bfa2cc569c0f8d5bc4315d39db64005b1b08 ) and raygui ( https://github.com/raysan5/raygui/commit/141ae0cd312656b7764b01079e43fc887aaaf4ce )

2023-11-11  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/shapes_splines_drawing.rb : Added

2023-11-10  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/text_font_sdf.rb : Added

2023-11-09  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/21dc42d2ad02cafed83cd39afd7305212787c114 ) and raygui ( https://github.com/raysan5/raygui/commit/a2726c8600058cf2b1e6a2660d6d26312b0df424 )

2023-10-28  vaiorabbit  <http://twitter.com/vaiorabbit>
