@@ -1,5 +1,5 @@
 Ruby-raylib : Yet another raylib wrapper for Ruby
-Copyright (c) 2021-2023 vaiorabbit <http://twitter.com/vaiorabbit>
+Copyright (c) 2021-2024 vaiorabbit <http://twitter.com/vaiorabbit>
 
 This software is provided 'as-is', without any express or implied
 warranty. In no event will the authors be held liable for any damages
