@@ -1,3 +1,7 @@
+2024-01-05  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/eb6dcab308162037272edbad93ea1f10797c7352 ) and raygui ( https://github.com/raysan5/raygui/commit/e30a826909cefbce39bae4ceaee76da6b163e2b1 )
+
 2023-12-30  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/raylib_with_tileson.rb : Added
